Bug 1344376 - Clicking on a link with target=_blank should fire onCreatedNavigationTarget. r=billm

MozReview-Commit-ID: JVao8IuBz9B